<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Barcode Scanner</string>
    
	<string name="editHint_content">请输入二维码内容</string>    

	<string name="button_create">生成</string>
	<string name="button_createQrcode">生成二维码</string>
	<string name="button_decodeImage">图片解码</string>
	<string name="button_github">Github</string>
	
	<string name="hint_scan">请将条码置于扫描框内</string>
	
	<string name="image">这是一张图片</string>
	<string name="url_github">http://github.com/xiaopansky/Android-BarcodeScanner</string>
</resources>
