<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <SurfaceView android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/surface_decode"/>
    
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:baselineAligned="false">
        <!-- 功能区 -->
        <LinearLayout android:layout_width="match_parent" android:orientation="vertical" android:layout_height="0dp" android:layout_weight="1" android:background="#70000000" android:padding="16dp">
       	    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
	       	    <!-- 扫描模式切换按钮 -->
	       	    <ToggleButton
	       	        android:id="@+id/toggleButton_decode_mode"
	       	        android:layout_width="wrap_content"
	       	        android:layout_height="wrap_content"
	       	        android:textOn="连扫"
	       	        android:textOff="连扫"/>
                <include layout="@layout/include_fill_view"/>
	       	    <!-- 闪光灯控制按钮 -->
	       	    <ToggleButton
	       	        android:id="@+id/toggleButton_decode_flash"
	       	        android:layout_width="wrap_content"
	       	        android:layout_height="wrap_content"
	       	        android:textOn="闪光灯"
	       	        android:textOff="闪光灯" />
       	    </LinearLayout>

            <!-- 扫描结果提示 -->
            <TextView
       	        android:id="@+id/text_decode_content" 
       	        android:layout_width="wrap_content" 
       	        android:layout_height="0dp" 
       	        android:layout_weight="1"
       	        android:layout_gravity="center" 
       	        android:textSize="15sp" 
       	        android:textColor="#FFFFFFFF" 
       	        android:gravity="center"
                android:autoLink="all"
                android:text="" />
        </LinearLayout>
        
        <!-- 扫描框区 -->
        <LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1.2">
            <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="2" android:background="#70000000"/>
            <me.xiaopan.android.barcodescanner.ScanAreaView
                android:id="@+id/scannArea_decode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="@drawable/shape_scan_area" />
            <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="2" android:background="#70000000"/>
        </LinearLayout>
        
        <!-- 功能区 -->
        <LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:orientation="vertical" android:padding="16dp" android:background="#70000000" android:gravity="center">
            <TextView
                android:id="@+id/text_decode_number"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textColor="#FFFFFFFF"
                android:gravity="center"
                android:text="@string/hint_scan"/>
        	<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        	    <Button
                    android:id="@+id/button_decode_createQRCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="8dp"
                    android:text="@string/button_createQrcode"/>
        	    <Button
                    android:id="@+id/button_decode_imageDecode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_decodeImage"/>
        	</LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/layout_main_doorUp"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
        	android:clickable="true"
            android:background="#FF5B5B5B"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/qrcode1"
                android:layout_gravity="center"
                android:contentDescription="@string/image"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_main_doorDown"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
        	android:clickable="true"
            android:background="#FF5B5B5B"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/qrcode2"
                android:background="#FF5B5B5B"
                android:layout_gravity="center"
                android:contentDescription="@string/image"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>