<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <SurfaceView android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/surface_decode"/>
    
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:baselineAligned="false">
        <!-- 功能区 -->
        <LinearLayout android:layout_width="match_parent" android:orientation="vertical" android:layout_height="0dp" android:layout_weight="1" android:background="#70000000" android:padding="16dp">
       	    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
	       	    <ToggleButton 
	       	        android:id="@+id/toggleButton_decode_mode"
	       	        android:layout_width="wrap_content" 
	       	        android:layout_height="wrap_content"
	       	        android:textOn="连扫"
	       	        android:textOff="单扫"/>
	       	    
	       	    <TextView 
	       	        android:layout_width="0dp"
	       	        android:layout_height="wrap_content"
	       	        android:layout_weight="1"/>
	       	    
	       	    <!-- 闪光灯控制按钮 -->
	       	    <ToggleButton 
	       	        android:layout_width="wrap_content" 
	       	        android:layout_height="wrap_content"
	       	        android:id="@+id/toggleButton_decode_flash"
	       	        android:button="@null"
	       	        android:drawableLeft="@drawable/selector_button_flash"
	       	        android:drawablePadding="6dp"
	       	        android:textOn="打开"
	       	        android:textOff="关闭"
	       	        android:checked="false"
	       	        android:layout_gravity="right"
	       	        android:background="@drawable/button_flashlight_normal"/>
       	    </LinearLayout>
       	    
       	    <TextView 
       	        android:id="@+id/text_decode_content" 
       	        android:layout_width="wrap_content" 
       	        android:layout_height="0dp" 
       	        android:layout_weight="1"
       	        android:layout_gravity="center" 
       	        android:textSize="15sp" 
       	        android:textColor="#FFFFFFFF" 
       	        android:autoLink="all"
       	        android:gravity="center"/>
        </LinearLayout>
        
        <!-- 扫描框区 -->
        <LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
            <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:background="#70000000"/>
            <me.xiaopan.easy.barcode.ScanAreaView android:id="@+id/scannArea_decode" android:layout_width="0dp" android:layout_height="match_parent" android:background="@drawable/shape_scan_area" android:layout_weight="6" />
            <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:background="#70000000"/>
        </LinearLayout>
        
        <!-- 提示区 -->
        <LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:orientation="vertical" android:padding="16dp" android:background="#70000000" android:gravity="center">
            <TextView android:layout_width="wrap_content" android:layout_height="0dp" android:layout_weight="1" android:id="@+id/text_decode_number" android:textSize="15sp" android:textColor="#FFFFFFFF" android:gravity="center" android:text="@string/hint_scan"/> 
        	<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        	    <Button android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/button_createQrcode" android:layout_marginRight="8dp" android:id="@+id/button_decode_createQRCode"/>
        	    <Button android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/button_decodeImage" android:id="@+id/button_decode_imageDecode"/>
        	</LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>